ref: sitemap generator and compiler