@@ -2,11 +2,12 @@ package commons.marcandreher.Commons;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Calendar;
 
-import com.redfin.sitemapgenerator.WebSitemapGenerator;
 import com.redfin.sitemapgenerator.GoogleCodeSitemapUrl.Options;
+import com.redfin.sitemapgenerator.WebSitemapGenerator;
 
 import commons.marcandreher.Commons.Flogger.Prefix;
 
@@ -25,18 +26,19 @@ public class SitemapGenerator {
     }
 
     public void addSitemapUrl(double priority, String url) {
-        try {
-            Options options = new Options(new URL(domain + url), "xml");
-            options.priority(priority);
-            Calendar cal = Calendar.getInstance();
-            cal.set(Calendar.DAY_OF_WEEK, cal.getFirstDayOfWeek());
-            options.lastMod(cal.getTime());
-            wsg.addUrl(options.build());
-        } catch (Exception e) {
-            Flogger.instance.log(Prefix.ERROR, e.getMessage(), 0);
-        }
+    try {
+        URI fullUri = new URI(domain + url);
+        Options options = new Options(fullUri.toURL(), "xml");
+        options.priority(priority);
+        Calendar cal = Calendar.getInstance();
+        cal.set(Calendar.DAY_OF_MONTH, cal.getFirstDayOfWeek());
+        options.lastMod(cal.getTime());
+        wsg.addUrl(options.build());
+    } catch (URISyntaxException | MalformedURLException e) {
+        Flogger.instance.log(Prefix.ERROR, e.getMessage(), 0);
     }
-
+}
+    
     public void write() {
         wsg.write();
     }
